resolved bug with z-index

--- a/src/BookmarksDashboard.css
+++ b/src/BookmarksDashboard.css
@@ -91,7 +91,7 @@ body {
    opacity: .15;
    filter: alpha(opacity=15);
    -moz-opacity: .15;
-   z-index: 101;
+   z-index: 1001;
    display: none;
 }
 .web_dialog {
@@ -106,7 +106,7 @@ body {
    background-color: #ffffff;
    border: 2px solid #336699;
    padding: 0px;
-   z-index: 102;
+   z-index: 1002;
    font-family: Verdana;
    font-size: 10pt;
 }
